test/types/records/ferguson/default-compare-mixed-insn.6.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:28: error: unresolved call '!=(R(int(64)), R(int(32)))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: this candidate did not match: !=(a: ?t1, b: ?t2)
